Fixed layout bugs & empty string input bug

--- a/app/client/stylus/app/home.styl
+++ b/app/client/stylus/app/home.styl
@@ -4,7 +4,8 @@
 .home-btn
   position absolute
   width 37%
-  &:hover
+  text-decoration none
+  &:focus
     opacity 0.7
 .home-btn-img
   width 100%
