--- a/app/client/stylus/app/profiles.styl
+++ b/app/client/stylus/app/profiles.styl
@@ -26,6 +26,7 @@
   height 50px
   margin-right 15px
   line-height 58px
+  text-decoration none
 //profile-delete class
 .profile-delete
   font-size 30px
